Remove link when there are no untagged articles

--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Tag/tags.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Tag/tags.html.twig
@@ -31,6 +31,10 @@
     </ul>
 
     <div>
-        <a href="{{ path('untagged') }}">{{ 'tag.list.see_untagged_entries'|trans }} ({{untagged}})</a>
+        {% if nbEntriesUntagged == 0 %}
+            {{ 'tag.list.no_untagged_entries'|trans }}
+        {% else %}
+            <a href="{{ path('untagged') }}">{{ 'tag.list.see_untagged_entries'|trans }} ({{nbEntriesUntagged}})</a>
+        {% endif %}
     </div>
 {% endblock %}
