--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li id="button_sort">
-                        <a title="{{ 'menu.top.sort_entries'|trans }}" href="#" data-activates="sort" class="nav-panel-menu button-collapse-right">
+                        <a class="nav-panel-menu button-collapse-right tooltipped js-sort-action" data-position="bottom" data-delay="50" data-tooltip="{{ 'menu.top.sort_entries'|trans }}" href="#" data-activates="sort">
                             <i class="material-icons">sort_by_alpha</i>
                         </a>
                     </li>
