--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Config/otp_app.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Config/otp_app.html.twig
@@ -39,7 +39,7 @@
                                 <div class="card-content">
                                     <div class="row">
                                         <div class="input-field col s12">
-                                            <label for="_auth_code">{{ "scheb_two_factor.auth_code"|trans }}</label>
+                                            <label for="_auth_code">{{ "auth_code"|trans({}, 'SchebTwoFactorBundle') }}</label>
                                             <input id="_auth_code" type="text" autocomplete="off" name="_auth_code" />
                                         </div>
                                     </div>
