--- a/src/Wallabag/UserBundle/Resources/views/Authentication/form.html.twig
+++ b/src/Wallabag/UserBundle/Resources/views/Authentication/form.html.twig
@@ -16,14 +16,14 @@
             {% endif %}
 
             <div class="input-field col s12">
-                <label for="_auth_code">{{ "scheb_two_factor.auth_code"|trans }}</label>
+                <label for="_auth_code">{{ "auth_code"|trans({}, 'SchebTwoFactorBundle') }}</label>
                 <input id="_auth_code" type="text" autocomplete="off" name="{{ authCodeParameterName }}" />
             </div>
 
             {% if displayTrustedOption %}
             <div class="input-field col s12">
                 <input id="_trusted" type="checkbox" name="{{ trustedParameterName }}" />
-                <label for="_trusted">{{ "scheb_two_factor.trusted"|trans }}</label>
+                <label for="_trusted">{{ "trusted"|trans({}, 'SchebTwoFactorBundle') }}</label>
             </div>
             {% endif %}
         </div>
@@ -31,7 +31,7 @@
     <div class="card-action center">
         <a href="{{ path('fos_user_security_logout') }}" class="waves-effect waves-light grey btn">{{ 'security.login.cancel'|trans }}</a>
         <button class="btn waves-effect waves-light" type="submit" name="send">
-            {{ "scheb_two_factor.login"|trans }}
+            {{ "login"|trans({}, 'SchebTwoFactorBundle') }}
             <i class="material-icons right">send</i>
         </button>
     </div>
