--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Tag/tags.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Tag/tags.html.twig
@@ -4,15 +4,16 @@
 
 {% block content %}
     <div class="results clearfix">
-        <div class="nb-results left">{{ 'tag.list.number_on_the_page'|transchoice(tags|length) }}</div>
+        {{ 'tag.list.number_on_the_page'|transchoice(tags|length) }}
     </div>
-
-    <br />
 
     <div class="row">
         <ul class="card-tag-labels">
+            <li class="chip">
+                <a href="{{ path('untagged') }}">{{ 'tag.list.untagged'|trans }} ({{nbEntriesUntagged}})</a>
+            </li>
             {% for tag in tags %}
-                <li title="{{tag.label}} ({{ tag.nbEntries }})" id="tag-{{ tag.id }}">
+                <li title="{{tag.label}} ({{ tag.nbEntries }})" id="tag-{{ tag.id }}" class="chip">
                     <a href="{{ path('tag_entries', {'slug': tag.slug}) }}" class="card-tag-link" data-handle="tag-link">
                         {{ tag.label }}&nbsp;({{ tag.nbEntries }})
                     </a>
@@ -21,12 +22,12 @@
                         {{ form_widget(renameForms[tag.id].label, {'attr': {'value': tag.label}}) }}
                         {{ form_rest(renameForms[tag.id]) }}
                     </form>
-                    <a class="card-tag-rename" data-handler="tag-rename" href="javascript:void(0);">
+                    <a class="card-tag-icon card-tag-rename" data-handler="tag-rename" href="javascript:void(0);">
                         <i class="material-icons">mode_edit</i>
                     </a>
                     {% endif %}
                     {% if app.user.config.feedToken %}
-                        <a rel="alternate" type="application/atom+xml" href="{{ path('tag_feed', {'username': app.user.username, 'token': app.user.config.feedToken, 'slug': tag.slug}) }}" class="card-tag-rss"><i class="material-icons">rss_feed</i></a>
+                        <a rel="alternate" type="application/atom+xml" href="{{ path('tag_feed', {'username': app.user.username, 'token': app.user.config.feedToken, 'slug': tag.slug}) }}" class="card-tag-icon"><i class="material-icons">rss_feed</i></a>
                     {% endif %}
                 </li>
             {% endfor %}
@@ -34,10 +35,6 @@
     </div>
 
     <div>
-        {% if nbEntriesUntagged == 0 %}
-            {{ 'tag.list.no_untagged_entries'|trans }}
-        {% else %}
-            <a href="{{ path('untagged') }}">{{ 'tag.list.see_untagged_entries'|trans }} ({{nbEntriesUntagged}})</a>
-        {% endif %}
+
     </div>
 {% endblock %}
