Sticky nav on entry action button click

--- a/app/Resources/static/themes/material/css/nav.scss
+++ b/app/Resources/static/themes/material/css/nav.scss
@@ -131,6 +131,11 @@ nav {
   display: none;
 }
 
+.entry-nav-top--sticky {
+  position: sticky;
+  top: 0;
+}
+
 @media (min-width: 993px) {
   .button-collapse {
     display: none;
