--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entry.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entry.html.twig
@@ -280,7 +280,7 @@
             {{ entry.content | raw }}
         </article>
 
-        <div class="fixed-action-btn horizontal click-to-toggle hide-on-large-only">
+        <div class="fixed-action-btn js-fixed-action-btn horizontal click-to-toggle hide-on-large-only">
             <a class="btn-floating btn-large" data-toggle="actions">
               <i class="material-icons">menu</i>
             </a>
