Enhanced article display Fixes #4153

--- a/app/Resources/static/themes/material/css/article.scss
+++ b/app/Resources/static/themes/material/css/article.scss
@@ -5,8 +5,10 @@
 #article {
   font-size: 20px;
   margin: 0 auto;
-  padding-bottom: 80px;
   max-width: 45em;
+  padding: 5px 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px #ccc;
 
   article {
     color: #424242;
