Added support for changing the HTML content of an Entry with TinyMCE. Therefor: Added TinyMCE into web resources folder as described in Symfony 3.3. Best Practices https://symfony.com/doc/3.3/best_practices/web-assets.html (GNU license, hope no conflict withs MIT) added content edit field in Form, changed view of material theme to include it, Activated loading TinyMCE in the edit view twig. To have it loading at then end of page so that it won't get lazy, added javascripts block at the end of base layout twig.
A switch to turn the edit mode on or off might come in handy if people are expected to not like the feature.
this could be simply added by putting an if into the twigs.

--- a/src/Wallabag/CoreBundle/Resources/views/base.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/base.html.twig
@@ -78,5 +78,8 @@
         {% if craue_setting('piwik_enabled') %}
             {{ piwik(craue_setting('piwik_host'), craue_setting('piwik_site_id')) }}
         {% endif %}
+        
+        {% block javascripts %}
+        {% endblock %}
     </body>
 </html>
