Added more coherence with color links for material theme

--- a/app/Resources/static/themes/material/css/article.scss
+++ b/app/Resources/static/themes/material/css/article.scss
@@ -54,7 +54,7 @@
     }
 
     a {
-      border-bottom: 1px dotted #03a9f4;
+      border-bottom: 1px dotted $blueAccentColor;
       text-decoration: none;
     }
 
