Changed visibility for article stats

--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_reading_time.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_reading_time.html.twig
@@ -1,5 +1,5 @@
 {% set readingTime = entry.readingTime / app.user.config.readingSpeed * 200 %}
-<i class="material-icons">timer</i>
+<i class="material-icons grey-text">timer</i>
 {% if readingTime > 0 %}
     <span>{{ 'entry.list.reading_time_minutes_short'|trans({'%readingTime%': readingTime|round}) }}</span>
 {% else %}
