--- a/app/Resources/static/themes/material/css/article.scss
+++ b/app/Resources/static/themes/material/css/article.scss
@@ -111,7 +111,7 @@
       flex-flow: row wrap;
 
       .stats {
-        font-size: 0.8em;
+        font-size: 0.7em;
         margin: 8px 5px 5px;
 
         li {
@@ -122,6 +122,7 @@
           i.material-icons {
             color: #3e3e3e;
             margin-right: 3px;
+            font-size: 18px;
           }
         }
 
@@ -138,10 +139,12 @@
     }
 
     .chip {
-      background-color: $blueAccentColor;
+      background-color: #9e9e9e;
       padding: 0 15px 0 10px;
       margin: auto 2px;
       border-radius: 6px;
+      height: 18px;
+      line-height: 18px;
 
       a,
       i {
@@ -150,8 +153,8 @@
 
       i.material-icons {
         float: right;
-        font-size: 20px;
-        line-height: 32px;
+        font-size: 16px;
+        line-height: 18px;
         padding-left: 8px;
       }
     }
