--- a/src/Wallabag/CoreBundle/Resources/views/themes/common/Entry/_title.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/common/Entry/_title.html.twig
@@ -14,7 +14,7 @@
     {{ 'entry.page_titles.untagged'|trans }}
 {% elseif currentRoute == 'same_domain' %}
     {{ 'entry.page_titles.same_domain'|trans }}
-{% elseif currentRoute == 'with_annotations' %}
+{% elseif currentRoute == 'annotated' %}
     {{ 'entry.page_titles.with_annotations'|trans }}
 {% else %}
     {{ 'entry.page_titles.unread'|trans }}
