Reduce opacity of archived entries on tag view
Fixes #4466

Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/app/Resources/static/themes/material/css/cards.scss
+++ b/app/Resources/static/themes/material/css/cards.scss
@@ -293,6 +293,11 @@ a.original:not(.waves-effect) {
   }
 }
 
+.card.archived,
+.card-stacked.archived {
+  opacity: 0.5;
+}
+
 #content .collection .collection-item {
   min-height: 65px;
   height: auto;
